Fixed upper white space gui disturbance

--- a/style.css
+++ b/style.css
@@ -592,7 +592,7 @@ form small {
 #top-bar {
     position: relative;
     background-color: #EEE;
-    height: 23px;
+    height: 22px;
 }
 
 #top-menu {
@@ -654,7 +654,7 @@ form small {
 #top-social {
     position: relative;
     float: right;
-    height: 40px;
+    height: 20px;
     margin: 0 -30px 0 40px;
 }
 
